--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <header>
-    <img src="vaishnavip.JPEG" width="180">
+    <img src="vaishnavip.jpeg" width="180">
 
 
 <h1>Vaishnavi Gurule</h1>
